--- a/Window Version/app/index.html
+++ b/Window Version/app/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="app.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/app.css">
+    <script src="js/script.js"></script>
     
     <title>To do list App</title>
   </head>
