readlist and files (not finished)

--- a/Window Version/app/index.html
+++ b/Window Version/app/index.html
@@ -39,7 +39,7 @@
         </div>
         <button id="newList"><img src="assets/plus.svg"  alt="">Nowa lista zadań</button>
       </aside>
-      <main>      
+      <main id="tasks">      
         
       </main>
       <footer>
