appearlist (almost fully working)

--- a/Window Version/app/index.html
+++ b/Window Version/app/index.html
@@ -30,8 +30,8 @@
       </nav>
       <aside id="menu">
         <div>
-          <button id="routine"><img src="assets/routine.svg"  alt=""><h1>|  </h1>Zadania na dzień</button>
-          <button id="main_list"><img src="assets/home.svg"  alt=""><h1>|  </h1>Lista zadań</button>
+          <button id="routine" onclick="appearList(this.id)"><img src="assets/routine.svg"  alt=""><h1>|  </h1>Zadania na dzień</button>
+          <button id="mainlist" onclick="appearList(this.id)"><img src="assets/home.svg"  alt=""><h1>|  </h1>Lista zadań</button>
           <h1></h1>
         </div>
         <div id="lists">
