fixed bug with empty arrays and started working on new feature (addtask)

--- a/Window Version/app/index.html
+++ b/Window Version/app/index.html
@@ -43,8 +43,8 @@
         
       </main>
       <footer>
-        <input type="text" placeholder="Dodaj nowe zadanie">
-        <button id="dodaj"><img src="assets/plus.svg" alt=""></button>
+        <input id="addTaskText" type="text" placeholder="Dodaj nowe zadanie">
+        <button id="addTask"><img src="assets/plus.svg" alt=""></button>
       </footer>
     </div>
   </body>
