--- a/main folder/app/index.html
+++ b/main folder/app/index.html
@@ -26,7 +26,6 @@
       <nav id="navi">
         <h1>To do list App</h1>
         <h2>Lista zadań</h2>
-        <button><img src="assets/tune.svg"  alt=""></button>
       </nav>
       <aside id="menu">
         <div>
@@ -40,7 +39,7 @@
         <button id="newList"><img src="assets/plus.svg"  alt="">Nowa lista zadań</button>
       </aside>
       <main id="tasks">      
-        
+          <h2>Wybierz listę zadań</h2>
       </main>
       <footer>
         <input id="addTaskText" type="text" placeholder="Dodaj nowe zadanie">
